--- a/INSTALL
+++ b/INSTALL
@@ -4,7 +4,7 @@ $> gcc -o evtest evtest.c
 Otherwise, run the following commands.
 
 $> autoreconf -iv
-$> configure --prefix=/usr 
+$> ./configure --prefix=/usr 
 $> make 
 $> make install
 
